--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+  .btn-theme {
+    @apply border-2 border-black px-5 py-2 rounded
+  }
+  .time-movie {
+    /* color: #9e9e9e; */
+    height: auto;
+      width: 100%;
+      border: 1px solid #e4e4e4;
+      cursor: pointer;
+      margin: 0px 16px 16px 0px;
+      padding: 8px;
+      border-radius: 4px;
+      text-decoration: none;
+      background-color: rgba(246, 246, 246, 0.5);
+  }
+  .custom-form {
+    margin-top: 200px !important;
+    max-width: 300px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #e8e8e8;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+  }
+  
+  .custom-form .ant-form-item {
+    margin-bottom: 15px;
+  }
+  
+  .custom-form .ant-form-item-label {
+    text-align: left;
+  }
+  
+  .custom-form .ant-btn {
+    width: 100%;
+  }
